--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     }
     #quote {
       margin-top: 100px;
-      font-size: 40px;
+      font-size: 20px;
       font-family: Verdana, sans-serif;
-      text-align: center;
+      text-align: top;
     }
   </style>
 </head>
