--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
   <title>Quote of the Day</title>
   <style>
     body {
-      background-color: #FFF9C4;
-    }
-    #quote {
-      margin-top: 100px;
-      font-size: 20px;
+      background-color: #f9e6c2;
       font-family: Verdana, sans-serif;
-      text-align: top;
     }
-  </style>
-</head>
-<body>
-  <div id="quote">
-    <p id="quote-text"></p>
-    <p id="quote-author"></p>
-  </div>
 
-  <script src="script.js"></script>
-</body>
-</html>
+    #quote {
+      background-color: #fff;
+      border-radius: 10px;
+      padding: 20px;
+      margin: 20px auto;
+      max-width: 600px;
+      height: 300px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    #quote-text {
+      font-size: 2em;
+      margin
