--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 
     #quote-text {
       font-size: 2em;
-      margin-bottom: 20px;
+      margin: 0;
     }
 
     #quote-author {
+      margin-top: 10px;
       font-size: 1.2em;
       font-style: italic;
     }
