--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     #quote {
       background-color: #fff;
       border-radius: 10px;
-      padding: 20px;
+      padding: 30px;
       margin: 20px auto;
-      max-width: 600px;
-      height: 300px;
+      max-width: 800px;
+      height: 400px;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -24,14 +24,13 @@
     }
 
     #quote-text {
-      font-size: 2em;
-      margin: 0;
+      font-size: 1.5em;
+      margin: 0 0 10px 0;
     }
 
     #quote-author {
-      margin-top: 10px;
       font-size: 1.2em;
-      font-style: italic;
+      margin: 10px 0 0 0;
     }
   </style>
 </head>
@@ -53,7 +52,7 @@
       const header = rows.shift();
       const quotes = rows.map(row => {
         const cells = row.split(',');
-        return { text: cells[0], author: cells[1] };
+        return { text: cells[0].replace(/"/g, ''), author: cells[1].replace(/"/g, '') };
       });
       return quotes;
     }
@@ -65,7 +64,7 @@
       const quoteText = document.getElementById('quote-text');
       const quoteAuthor = document.getElementById('quote-author');
       quoteText.textContent = quote.text;
-      quoteAuthor.textContent = quote.author;
+      quoteAuthor.textContent = `- ${quote.author}`;
     }
 
     // Display a quote when the page is first loaded.
