--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     #quote {
       background-color: #fff;
       border-radius: 10px;
-      padding: 30px;
+      padding: 50px;
       margin: 20px auto;
       max-width: 800px;
-      height: 400px;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -25,11 +24,11 @@
 
     #quote-text {
       font-size: 1.5em;
-      margin: 0 0 10px 0;
+      margin: 0;
     }
 
     #quote-author {
-      font-size: 1.2em;
+      font-size: 1em;
       margin: 10px 0 0 0;
     }
   </style>
@@ -64,7 +63,7 @@
       const quoteText = document.getElementById('quote-text');
       const quoteAuthor = document.getElementById('quote-author');
       quoteText.textContent = quote.text;
-      quoteAuthor.textContent = `- ${quote.author}`;
+      quoteAuthor.textContent = quote.author;
     }
 
     // Display a quote when the page is first loaded.
