--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     #quote {
       background-color: #fff;
       border-radius: 10px;
-      padding: 50px;
+      padding: 40px;
       margin: 20px auto;
       max-width: 800px;
+      height: 300px;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -24,12 +25,14 @@
 
     #quote-text {
       font-size: 1.5em;
+      font-style: italic;
       margin: 0;
     }
 
     #quote-author {
-      font-size: 1em;
-      margin: 10px 0 0 0;
+      font-size: 1.2em;
+      font-style: normal;
+      margin-top: 10px;
     }
   </style>
 </head>
@@ -39,35 +42,6 @@
     <p id="quote-author"></p>
   </div>
 
-  <script>
-    // Replace the URL below with the path to your quotes.csv file.
-    const QUOTES_CSV_URL = 'quotes.csv';
-
-    // Retrieve the CSV file as text and parse it into an array of quote objects.
-    async function fetchQuotes() {
-      const response = await fetch(QUOTES_CSV_URL);
-      const text = await response.text();
-      const rows = text.trim().split('\n');
-      const header = rows.shift();
-      const quotes = rows.map(row => {
-        const cells = row.split(',');
-        return { text: cells[0].replace(/"/g, ''), author: cells[1].replace(/"/g, '') };
-      });
-      return quotes;
-    }
-
-    // Display a random quote from the list of quotes.
-    async function displayQuote() {
-      const quotes = await fetchQuotes();
-      const quote = quotes[Math.floor(Math.random() * quotes.length)];
-      const quoteText = document.getElementById('quote-text');
-      const quoteAuthor = document.getElementById('quote-author');
-      quoteText.textContent = quote.text;
-      quoteAuthor.textContent = quote.author;
-    }
-
-    // Display a quote when the page is first loaded.
-    displayQuote();
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
